--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "meadowlark",
   "version": "1.0.0",
-  "description": "",
+  "description": "Meadowlark Travel Website",
   "main": "meadowlark.js",
   "dependencies": {
     "express": "^4.14.0",
     "express3-handlebars": "^0.5.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "grunt": "^1.0.1",
+    "grunt-cafe-mocha": "^0.1.13",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-exec": "^1.0.0",
+    "mocha": "^3.0.2",
+    "zombie": "^4.2.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
