--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "meadowlark",
-  "version": "1.0.0",
-  "description": "Meadowlark Travel Website",
+  "name": "meadowlarktravel",
+  "version": "0.0.0",
+  "description": "Sample website for Web Development with Node and Express (O'Reilly).",
   "main": "meadowlark.js",
-  "dependencies": {
-    "express": "^4.14.0",
-    "express3-handlebars": "^0.5.2"
-  },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "grunt": "^1.0.1",
-    "grunt-cafe-mocha": "^0.1.13",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-exec": "^1.0.0",
-    "mocha": "^3.0.2",
-    "zombie": "^4.2.1"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/diondree/meadowlark.git"
+    "url": "https://github.com/diondree/meadowlark.git"
   },
-  "author": "Diondre",
-  "license": "ISC",
+  "author": "Diondre Edwards",
+  "license": "GPL, MIT",
   "bugs": {
     "url": "https://github.com/diondree/meadowlark/issues"
   },
-  "homepage": "https://github.com/diondree/meadowlark#readme"
+  "homepage": "https://github.com/diondree/meadowlark",
+  "dependencies": {
+    "express": "~4.4.2",
+    "express3-handlebars": "~0.5.0",
+    "chai": "~1.9.1"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-cafe-mocha": "^0.1.12",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-exec": "^0.4.5",
+    "mocha": "~1.20.1",
+    "zombie": "~2.0.0-alpha31"
+  }
 }
